@@ -35,8 +35,10 @@ _ The rounding mode type mp_rnd_t is now mpfr_rnd_t (mp_rnd_t kept for
 - New function mpfr_digamma.
 - New functions mpfr_set_flt and mpfr_get_flt to convert from/to the float type
 - Speed improvement for large operands in the trigonometric functions
-  (mpfr_sin, mpfr_cos, mpfr_tan, mpfr_sin_cos): speedup of more than 3 for
-  10^5 digits, of more than 6 for 10^6 digits
+  (mpfr_sin, mpfr_cos, mpfr_tan, mpfr_sin_cos): speedup of about 2.5 for
+  10^5 digits, of about 5 for 10^6 digits.
+- Speed improvement for large operands of the inverse trigonometric functions
+  (arcsin, arccos, arctan): about 2 for 10^3 digits, up to 2.7 for 10^6 digits
 - Some documentation files are installed in $docdir.
 - Bug fixes.
 
